# caldata-mdsa-training-practice

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  dbt_project.yml  pyproject.toml
macros/: map_county_name_to_county_fips.sql
models/: _sources.yml
models/1_staging/: _stg_water_quality.yml  stg_water_quality__lab_results.sql  stg_water_quality__stations.sql
models/2_intermediate/: _int_water_quality.yml  int_water_quality__counties.sql  int_water_quality__lab_results_enriched.sql  int_water_quality__top_parameters_per_station.sql
models/3_marts/: _water_quality.yml  stations.sql
models/staging/training/: _stg_water_quality.yml  stg_water_quality__lab_results.sql  stg_water_quality__stations.sql
python/: load_water_quality_data.py
