[project]
name = "caldata-mdsa-training-transform"
version = "0.1.0"
description = "CalData MDSA Training - Transform Project"
authors = ["CalData Office of Data Innovation"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dbt-core~=1.8.0",
    "dbt-snowflake~=1.8.0",
    "pandas",
    "snowflake-connector-python",
    "requests",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
